cabal-version:      2.4
name:               safe-server
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             unmanbearpig
maintainer:         unmanbearpig@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable safe-server
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      servant-websockets ^>=2.0.0,
                      aeson ^>=2.0.3.0,
                      conduit ^>=1.3.4.2,
                      text ^>=2.0,
                      wai ^>=3.2.3,
                      warp ^>=3.3.21,
                      servant-server ^>=0.19.1,
    hs-source-dirs:   app
    default-language: Haskell2010
